<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/option_camera"
          android:icon= "@android:drawable/ic_menu_camera"
          android:title="@string/options_menu_camera" />
    <item android:id="@+id/option_gallery"
          android:icon= "@android:drawable/ic_menu_gallery"
          android:title="@string/options_menu_gallery" />
    <item android:id="@+id/option_compose"
          android:icon= "@drawable/ic_menu_compose"
          android:title="@string/options_menu_compose" />
    <item android:id="@+id/option_pref"
          android:icon= "@android:drawable/ic_menu_preferences"
          android:title="@string/options_menu_prefs" />
    <item android:id="@+id/option_account"
          android:icon="@drawable/ic_menu_login"
          android:title="@string/options_menu_account" />
    <item android:id="@+id/option_upload"
          android:icon="@android:drawable/ic_menu_upload"
          android:title="@string/options_menu_uploadall" />
    <item android:id="@+id/option_delete"
          android:icon="@android:drawable/ic_delete"
          android:title="@string/options_menu_deleteall" />
    <item android:id="@+id/about"
          android:icon="@android:drawable/ic_menu_info_details"
          android:title="@string/pref_menu_about" />
</menu>
