<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:id="@+id/top"
	   	    android:padding="10dp"	  
	   	    android:orientation="vertical"
		    >
		
			<LinearLayout
				  xmlns:android="http://schemas.android.com/apk/res/android"
				  android:id="@+id/ArtefactJournalLayout"
				  android:layout_width="fill_parent"
				  android:layout_height="wrap_content"
				  android:orientation="horizontal">
				  
			    <Spinner 
			        android:id="@+id/upload_journal_spinner"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
					android:prompt="@string/upload_journal_prompt"
			    	/>
			</LinearLayout>
			<LinearLayout
				  xmlns:android="http://schemas.android.com/apk/res/android"
				  android:id="@+id/ArtefactConfirmLayout"
				  android:layout_width="fill_parent"
				  android:layout_height="wrap_content"
				  android:orientation="horizontal">
				  
					<CheckBox 
							style="@android:style/TextAppearance.Small"
							android:id="@+id/chkUpload"
						    android:layout_width="60dip"
							android:layout_height="wrap_content"
							android:layout_margin="5dip"
			  							  />
					
					<TextView android:text="@string/upload_confirm_text"
							  android:id="@+id/txtArtefactConfirm"
							  android:layout_width="wrap_content"
							  android:singleLine="false"
							  android:layout_height="wrap_content"
			  				  android:layout_margin="5dip"
			  				  android:paddingBottom="15dip"
			  				  style="@android:style/TextAppearance.Small">
					</TextView>
			</LinearLayout>
			<LinearLayout
				  xmlns:android="http://schemas.android.com/apk/res/android"
				  android:id="@+id/ArtefactTitleLayout"
				  android:layout_width="fill_parent"
				  android:layout_height="wrap_content"
				  android:orientation="horizontal">

					<TextView android:text="@string/upload_title_label"
							  android:layout_width="60dip"
							  android:singleLine="false"
							  android:layout_height="wrap_content"
			  				  android:padding="2dip"
			  				  android:layout_margin="5dip"
			  				  style="@android:style/TextAppearance.Small">
					</TextView>
				  
					<EditText android:text=""
							  android:id="@+id/txtArtefactTitle"
							  android:singleLine="true"
							  android:layout_width="fill_parent"
							  android:layout_height="wrap_content">
				  	</EditText>
					
			</LinearLayout>
			<LinearLayout
				  xmlns:android="http://schemas.android.com/apk/res/android"
				  android:id="@+id/ArtefactDescriptionLayout"
				  android:layout_width="fill_parent"
  				  android:layout_height="wrap_content"
				  android:layout_marginTop="5dp"
				  android:orientation="horizontal">

					<TextView android:id="@+id/txtArtefactDescriptionLabel"
					    	  android:text="@string/upload_file_description_label"
							  android:layout_width="60dip"
							  android:singleLine="false"
							  android:layout_height="wrap_content"
			  				  android:padding="2dip"
			  				  android:layout_margin="5dip"
			  				  style="@android:style/TextAppearance.Small">
					</TextView>
					<EditText android:text=""
							  android:id="@+id/txtArtefactDescription"
							  android:singleLine="false"
							  android:layout_width="fill_parent"
							  android:layout_height="wrap_content"
							  >
				  	</EditText>
			</LinearLayout>
			<LinearLayout
				  xmlns:android="http://schemas.android.com/apk/res/android"
				  android:layout_width="fill_parent"
				  android:layout_height="wrap_content"
				  android:layout_marginTop="5dp"
				  android:orientation="horizontal">

					<TextView android:text="@string/upload_tags_label"
							  android:layout_width="60dip"
							  android:singleLine="false"
							  android:layout_height="wrap_content"
			  				  android:padding="2dip"
			  				  android:layout_margin="5dip"
			  				  style="@android:style/TextAppearance.Small">
					</TextView>
					
					<EditText android:text=""
							  android:id="@+id/txtArtefactTags"
							  android:singleLine="true"
							  android:layout_width="fill_parent"
							  android:layout_height="wrap_content">
				  	</EditText>
			</LinearLayout>
			<LinearLayout
				  xmlns:android="http://schemas.android.com/apk/res/android"
				  android:layout_width="fill_parent"
				  android:layout_height="wrap_content"
				  android:layout_marginTop="5dp"
				  android:orientation="horizontal">
					<TextView android:text=""
							  android:layout_width="60dip"
							  android:singleLine="false"
							  android:layout_height="wrap_content"
			  				  android:padding="2dip"
			  				  android:layout_margin="5dip"
			  				  style="@android:style/TextAppearance.Small">
					</TextView>
			
				    <Spinner 
					        android:id="@+id/upload_tags_spinner"
					        android:layout_width="fill_parent"
					        android:layout_height="wrap_content"
				    />
			</LinearLayout>	
			<LinearLayout
				  xmlns:android="http://schemas.android.com/apk/res/android"
				  android:id="@+id/ArtefactJournalExtrasLayout"
				  android:layout_width="fill_parent"
				  android:layout_height="wrap_content"
				  android:orientation="vertical"
				  android:visibility="gone">
   				<LinearLayout
					  xmlns:android="http://schemas.android.com/apk/res/android"
					  android:id="@+id/ArtefactIsDraftLayout"
					  android:layout_width="fill_parent"
					  android:layout_height="wrap_content"
					  android:orientation="horizontal">
					  
   				    <!-- android:text="@string/upload_is_draft_label"-->
						<CheckBox 
								style="@android:style/TextAppearance.Small"
								android:id="@+id/txtArtefactIsDraft"
								android:layout_height="wrap_content"
								android:layout_margin="5dip"
								android:checked="false"
							    android:layout_width="60dip"
				  							  />
						
						<TextView android:text="@string/upload_is_draft_text"
								  android:layout_width="wrap_content"
								  android:singleLine="false"
								  android:layout_height="wrap_content"
				  				  android:padding="5dip"
				  				  android:layout_margin="5dip"
				  				  style="@android:style/TextAppearance.Small">
						</TextView>
				</LinearLayout>
				<LinearLayout
					  xmlns:android="http://schemas.android.com/apk/res/android"
					  android:id="@+id/ArtefactAllowCommentsLayout"
					  android:layout_width="fill_parent"
					  android:layout_height="wrap_content"
					  android:orientation="horizontal">
					  <!-- android:text="@string/upload_allow_comments_label" -->
						<CheckBox 
								style="@android:style/TextAppearance.Small"
								android:id="@+id/txtArtefactAllowComments"
								android:layout_height="wrap_content"
								android:layout_margin="5dip"
								android:checked="true"
						   		android:layout_width="60dip"
				  							  />
						<TextView android:text="@string/upload_allow_comments_text"
								android:layout_width="wrap_content"
								android:singleLine="false"
								android:layout_height="wrap_content"
				  				android:padding="5dip"
				  				android:layout_margin="5dip"
				  				style="@android:style/TextAppearance.Small">
						</TextView>
				</LinearLayout>
			</LinearLayout>			
			<Gallery xmlns:android="http://schemas.android.com/apk/res/android" 
			    android:id="@+id/FileGallery"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
  				android:layout_margin="5dip"
  				android:gravity="center_horizontal"
  				android:layout_gravity="fill_horizontal"
				android:spacing="5dip"
				android:scrollbars="horizontal"
			/>						    		    
							
			<LinearLayout
			  xmlns:android="http://schemas.android.com/apk/res/android"
			  android:id="@+id/ArtefactSettingsButtonLayout"
			  android:layout_width="fill_parent"
			  android:layout_height="wrap_content"
			  android:layout_margin="5dp"
			  android:gravity="center_horizontal"
			  android:orientation="horizontal">
			  
				<Button android:text="@string/btnupload"
						android:id="@+id/btnUpload"
						android:layout_weight="1"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:enabled="false"
						style="@style/MaharaButton"
						>
				</Button>
				<Button android:text="@string/btnsave"
						android:id="@+id/btnSave"
						android:layout_weight="1"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:enabled="true"
						style="@style/MaharaButton"
						>
				</Button>
				<Button android:text="@string/btncancellabel"
						android:id="@+id/btnCancel"
						android:layout_weight="1"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						style="@style/MaharaButton"
						>
				</Button>
				
			</LinearLayout>
					<EditText android:text=""
							  android:id="@+id/txtArtefactId"
							  android:singleLine="true"
							  android:layout_width="fill_parent"
							  android:layout_height="wrap_content"
							  android:visibility="invisible">
				  	</EditText>
		</LinearLayout>
	
</ScrollView>